# monitor

./: .gitignore  .gitmodules  Cargo.toml  Makefile  Parts.kicad_sym  clocky.kicad_pcb  clocky.kicad_pro  clocky.kicad_sch  device.x  filter_pos.py  font-10x16.txt  font.py  monitor.kicad_pcb  monitor.kicad_pro  monitor.kicad_sch
.cargo/: config.toml
Parts.pretty/: .gitignore  Dummy.kicad_mod  ENS220.kicad_mod  FXLS8971CF.kicad_mod  JST_XH_B4B-XH-A_1x04_P2.50mm_Vertical.kicad_mod  MountingHole_3mm_Pad.kicad_mod  NetTie-2_0.2mm.kicad_mod  PinHeader_1x03_P2.54mm_Vertical.kicad_mod  PinHeader_1x04_P2.54mm_Vertical.kicad_mod  PinHeader_1x08_P2.54mm_Vertical.kicad_mod  PinHeader_1x25_P2.54mm_Vertical.kicad_mod  PinSocket_1x20_P2.54mm_Vertical.kicad_mod  QFN-20-1EP_3.5x3.5mm_P0.5mm_EP2x2mm.kicad_mod  QFN-48-1EP_7x7mm_P0.5mm_EP5.6x5.6mm.kicad_mod  RDN0011A-MFG.kicad_mod  Skedd6.kicad_mod  TestPoint.kicad_mod  TwoPin_P3.5mm.kicad_mod  USB-C-male-24-Ass.kicad_mod  USB_C_Receptacle_16P.kicad_mod  WSON-6-1EP_2x2mm_P0.65mm_NoEP.kicad_mod
src/: adc.rs  blink-clocky.rs  blink-monitor.rs  clocky-lpblink.rs  clocky-thermo.rs  clocky.rs  clocky32.rs  clocky48.rs  cpu.rs  debug.rs  decimal.rs  dma.rs  ens.rs  ens212.rs  ens220.rs  font.rs  fxls8971.rs  i2c.rs  lcd.rs  low_power.rs  monitor-discrete.rs  monitor-hall.rs  monitor.rs  nodebug.rs  noise.rs  oled.rs  rtc.rs  tmp117.rs  tsc.rs  usqrt.rs  utils.rs  vcell.rs
src/clocky/: date_time.rs  display.rs  touch.rs
stm32u031/: Cargo.toml  wash-svd.py
