cargo-features = ['per-package-target', 'different-binary-name']

[package]
name = 'monitor'
version = '0.1.0'
edition = '2024'

[dependencies]
stm32u031 = { path = './stm32u031' }
arrayvec = {version = '*', default-features=false}
konst = {version = '*', features = ['iter']}
static_assertions = "*"

[target.'cfg(not(target_arch = "arm"))'.dependencies]
cortex-m = '*'

[target.'cfg(target_arch = "arm")'.dependencies]
cortex-m = {version = '*', features = ['inline-asm']}

[[bin]]
name = 'monitor'
filename = 'monitor.elf'
path = 'src/monitor.rs'

#[[bin]]
#name = 'clocky'
#path = 'src/clocky.rs'

[[bin]]
name = 'blink-monitor'
filename = 'blink-monitor.elf'
path = 'src/blink-monitor.rs'

[[bin]]
name = 'blink-clocky'
filename = 'blink-clocky.elf'
path = 'src/blink-clocky.rs'

[profile.dev]
panic = 'abort'

[profile.release]
lto = true
codegen-units = 1
opt-level = 's'
debug = true
panic = 'abort'
strip = false
