cargo-features = ['different-binary-name']

[package]
name = 'monitor'
version = '0.1.0'
edition = '2024'

[dependencies]
stm32u031 = { path = './stm32u031' }
arrayvec = {version = '*', default-features=false}
konst = {version = '*', features = ['iter']}

[target.'cfg(not(target_arch = "arm"))'.dependencies]
cortex-m = '*'

[target.'cfg(target_arch = "arm")'.dependencies]
cortex-m = {version = '*', features = ['inline-asm']}

[[bin]]
name = 'monitor-discrete'
filename = 'monitor-discrete.elf'
path = 'src/monitor-discrete.rs'

[[bin]]
name = 'monitor-hall'
filename = 'monitor-hall.elf'
path = 'src/monitor-hall.rs'

[[bin]]
name = 'clocky32'
filename = 'clocky32.elf'
path = 'src/clocky32.rs'

[[bin]]
name = 'clocky48'
filename = 'clocky48.elf'
path = 'src/clocky48.rs'

[[bin]]
name = 'blink-monitor'
filename = 'blink-monitor.elf'
path = 'src/blink-monitor.rs'

[[bin]]
name = 'blink-clocky'
filename = 'blink-clocky.elf'
path = 'src/blink-clocky.rs'

[[bin]]
name = 'clocky-thermo'
filename = 'clocky-thermo.elf'
path = 'src/clocky-thermo.rs'

[profile.dev]
panic = 'abort'

[profile.release]
lto = true
codegen-units = 1
opt-level = 's'
debug = true
panic = 'abort'
strip = false
